--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,3 @@
-/.idea/
-/.vscode/
-/bin/
-/dist/
-.local.env
-terraform-provider-mssql
-terraform-provider-mssql.log
-
 # Local .terraform directories
 **/.terraform/*
 
@@ -41,5 +33,21 @@ override.tf.json
 terraform.rc
 terraform
 
+# VS Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# JetBrains
+.idea/*
+
 # Local ignores
 .DS_Store
+/bin/
+/dist/
+.local.env
+terraform-provider-mssql
+terraform-provider-mssql.log
