--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,12 +13,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-      
+
     - name: Run unit tests
       run: make test
-      
+
     - name: Run acceptance tests
       run: |
         make docker-start
-        TESTARGS=-count=1 make testacc-local
+        sh -c 'TESTARGS=-count=1 ./wait-for localhost:1433 -- make testacc-local'
         make docker-stop
