--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,4 +1,5 @@
 # Visit https://goreleaser.com for documentation on how to customize this behavior.
+project_name: terraform-provider-mssql
 before:
   hooks:
     - go mod download
